# noteeli

./: .env.example  .gitignore  .pdm-python  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
.noteeli/: noteeli.sqlite3
app/: __init__.py  main.py  run.py
app/core/: config.py  templates.py
app/domains/: __init__.py
app/domains/auth/: router.py  service.py
app/domains/auth/views/: login.mako
app/domains/preferences/: __init__.py  repository.py  schemas.py  service.py
app/domains/workspace/: __init__.py  router.py  schemas.py  service.py  storage.py
app/domains/workspace/views/: index.mako
app/views/: base.mako
content/: Start here.md  test.md
static/: app.css  app.js  manifest.webmanifest  service-worker.js
tests/: test_directory_browser_service.py  test_preference_profiles.py  test_preferences_service.py  test_workspace_service.py
